--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -41,9 +41,7 @@
             border-radius: 5px;
             cursor: pointer;
         }
-        button:hover {
-            background-color: #218838;
-        }
+        button:hover { background-color: #218838; }
         .message {
             text-align: center;
             margin-top: 15px;
@@ -64,6 +62,8 @@
     <h2>Đăng ký tài khoản</h2>
     <input type="text" id="username" placeholder="Tên đăng nhập" required>
     <input type="password" id="password" placeholder="Mật khẩu" required>
+    <input type="text" id="fullName" placeholder="Họ và tên đầy đủ" required>
+    <input type="email" id="email" placeholder="Email" required>
     <button onclick="register()">Đăng ký</button>
     <div class="message" id="message"></div>
     <div class="link">
@@ -75,18 +75,20 @@
     async function register() {
         const username = document.getElementById('username').value.trim();
         const password = document.getElementById('password').value.trim();
+        const fullName = document.getElementById('fullName').value.trim();
+        const email = document.getElementById('email').value.trim();
         const messageDiv = document.getElementById('message');
 
-        if (!username || !password) {
+        if (!username || !password || !fullName || !email) {
             messageDiv.innerText = "⚠️ Vui lòng nhập đầy đủ thông tin!";
             return;
         }
 
         try {
-            const response = await fetch('/api/users/register', {
+            const response = await fetch('/api/auth/register', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({ username, password })
+                body: JSON.stringify({ username, password, fullName, email })
             });
 
             const text = await response.text();
