--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -72,6 +72,8 @@
 </div>
 
 <script>
+    const API_BASE = "http://localhost:8080/api";
+
     async function register() {
         const username = document.getElementById('username').value.trim();
         const password = document.getElementById('password').value.trim();
@@ -85,7 +87,7 @@
         }
 
         try {
-            const response = await fetch('/api/auth/register', {
+            const response = await fetch(`${API_BASE}/auth/register`, {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
                 body: JSON.stringify({ username, password, fullName, email })
@@ -101,6 +103,7 @@
                 messageDiv.style.color = "red";
             }
         } catch (error) {
+            console.error(error);
             messageDiv.innerText = "❌ Lỗi kết nối đến server!";
         }
     }
