Initial commit - upload project

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,23 +7,27 @@
 </head>
 <body>
 <h1>Quản Lý Task</h1>
-<button class="btn btn-danger" onclick="logout()">Đăng xuất</button>
+<div class="top-bar">
+    <button class="btn-logout" onclick="logout()">Đăng xuất</button>
+</div>
 
 <!-- Form thêm / sửa Task -->
 <section id="task-form">
     <h2>Thêm / Sửa Task</h2>
-    <input type="text" id="title" placeholder="Tiêu đề">
-    <input type="text" id="description" placeholder="Mô tả">
+    <div class="form-row">
+        <input type="text" id="title" placeholder="Tiêu đề">
+        <input type="text" id="description" placeholder="Mô tả">
 
-    <select id="status">
-        <option value="PENDING">PENDING</option>
-        <option value="IN_PROGRESS">IN_PROGRESS</option>
-        <option value="DONE">DONE</option>
-    </select>
+        <select id="status">
+            <option value="PENDING">PENDING</option>
+            <option value="IN_PROGRESS">IN_PROGRESS</option>
+            <option value="DONE">DONE</option>
+        </select>
 
-    <input type="date" id="deadline" placeholder="Deadline">
+        <input type="date" id="deadline" placeholder="Deadline">
 
-    <button id="addTaskBtn">Thêm Task</button>
+        <button id="addTaskBtn">Thêm Task</button>
+    </div>
 </section>
 
 <hr>
@@ -31,24 +35,26 @@
 <!-- Bộ lọc và sắp xếp -->
 <section id="filter-sort">
     <h3>Bộ lọc và Sắp xếp</h3>
-    <select id="filterStatus">
-        <option value="">-- Tất cả trạng thái --</option>
-        <option value="PENDING">PENDING</option>
-        <option value="IN_PROGRESS">IN_PROGRESS</option>
-        <option value="DONE">DONE</option>
-    </select>
+    <div class="filter-sort">
+        <select id="filterStatus">
+            <option value="">-- Tất cả trạng thái --</option>
+            <option value="PENDING">PENDING</option>
+            <option value="IN_PROGRESS">IN_PROGRESS</option>
+            <option value="DONE">DONE</option>
+        </select>
 
-    <select id="sortBy">
-        <option value="createdAt">Ngày tạo</option>
-        <option value="deadline">Deadline</option>
-    </select>
+        <select id="sortBy">
+            <option value="createdAt">Ngày tạo</option>
+            <option value="deadline">Deadline</option>
+        </select>
 
-    <select id="sortDir">
-        <option value="asc">Tăng dần</option>
-        <option value="desc">Giảm dần</option>
-    </select>
+        <select id="sortDir">
+            <option value="desc">Giảm dần</option>
+            <option value="asc">Tăng dần</option>
+        </select>
 
-    <button onclick="applyFilter()">Lọc / Sắp xếp</button>
+        <button onclick="applyFilter()">Lọc / Sắp xếp</button>
+    </div>
 </section>
 
 <hr>
@@ -56,7 +62,7 @@
 <!-- Danh sách Task -->
 <section id="task-list">
     <h2>Danh Sách Task</h2>
-    <table border="1" id="taskTable">
+    <table id="taskTable">
         <thead>
         <tr>
             <th>ID</th>
@@ -82,7 +88,7 @@
 <section id="user-section" style="display:none;">
     <h2>Danh Sách Người Dùng (Admin)</h2>
     <button onclick="loadUsers()">Tải danh sách người dùng</button>
-    <table border="1" id="userTable">
+    <table id="userTable">
         <thead>
         <tr>
             <th>ID</th>
